# gnome-devel-docs

./: .gitignore  .gitmodules  HACKING  NEWS  configure.ac  gnome-devel-docs.doap  hotdoc.json  mallard_to_md.sh
accessibility-devel-guide/: Makefile.am
devel-guide/: Makefile.am
devel-guide/C/: app-menu.page  ask-help.page  dev-help-appmenu.page  dev-help-build.page  dev-help-write.page  dev-help.page  dev-launching-desktop.page  dev-launching-icons.page  dev-launching-mime.page  dev-launching-startupnotify.page  dev-launching.page  dev-thumbnailer.page  dev-translate-build.page  dev-translate-setup.page  dev-translate.page  extension-icon-working.page  extension-toolbar.page  extension-twitter.page  extension-widget.page  extension.page  gtkapplication-actions.page  gtkapplication-helloworld.page  gtkapplication-menu.page  gtkapplication-window.page  gtkapplication.page  help-appmenu.page  help-build.page  help-write.page  help.page  index.page
devel-guide/C/examples/: gtkapp-actions.c  gtkapp-helloworld.c  gtkapp-menu.c  gtkapp-window.c
hig/: Makefile.am
markdown_files/: dev-help-appmenu.markdown  dev-help-appmenu.yaml  dev-help-build.markdown  dev-help-build.yaml  dev-help-write.markdown  dev-help-write.yaml  dev-help.markdown  dev-help.yaml  dev-launching-desktop.markdown  dev-launching-desktop.yaml  dev-launching-icons.markdown  dev-launching-icons.yaml  dev-launching-mime.markdown  dev-launching-mime.yaml  dev-launching-startupnotify.markdown  dev-launching-startupnotify.yaml  dev-launching.markdown  dev-launching.yaml  (+112 more)
programming-guidelines/: .gitignore  Makefile.am  hotdoc.json  sitemap.txt
programming-guidelines/C/: README  api-stability.page  c-coding-style.page  databases.page  documentation.page  file-system.page  gerror.page  glist.page  index.page  introspection.page  logging.page  main-contexts.page  memory-management.page  namespacing.page  parallel-installability.page  preconditions.page  threading.page  tooling.page  unit-testing.page  version-control.page  versioning.page  writing-good-code.page
programming-guidelines/cs/: cs.po
programming-guidelines/de/: de.po
programming-guidelines/es/: es.po
programming-guidelines/hotdoc/: .gitignore  Makefile  README.md  hotdoc.json  sitemap.txt
programming-guidelines/hotdoc/extra_theme/css/: extra_frontend.css
programming-guidelines/hotdoc/extra_theme/templates/: brand-logo.html  navbar.html  navbar_links.html  page_content.html  stylesheets.html
programming-guidelines/hotdoc/less/: variables.less
programming-guidelines/hotdoc/markdown_files/: c-coding-style.md  databases.md  documentation.md  file-system.md  gerror.md  glist.md  index.md  namespacing.md  parallel-installability.md  programming-guidelines.md  threading.md  unit-testing.md  writing-good-code.md
programming-guidelines/markdown_files/: additional-materials.md  api-stability.md  general-guidelines.md  introspection.md  logging.md  main-contexts.md  maintainer-guidelines.md  memory-management.md  preconditions.md  specific-how-tos.md  tooling.md  version-control.md  versioning.md
(+169 files in other folders)
