@YELP_HELP_RULES@

HELP_ID = devel-guide

HELP_FILES = \
        dev-help-appmenu.page \
        dev-help-build.page \
        dev-help.page \
        dev-help-write.page \
        dev-launching-desktop.page \
        dev-launching-icons.page \
        dev-launching-mime.page \
        dev-launching-startupnotify.page \
        dev-launching.page \
        dev-thumbnailer.page \
        dev-translate-build.page \
        dev-translate.page \
        dev-translate-setup.page \
        dev-translate-tools.page \
	index.page \
	legal.xml

HELP_MEDIA =

HELP_LINGUAS =
