@YELP_HELP_RULES@

HELP_ID = devel-guide

HELP_FILES = \
        dev-launching-desktop.page \
        dev-launching-icons.page \
        dev-launching-mime.page \
        dev-launching-startupnotify.page \
        dev-launching.page \
        dev-thumbnailer.page \
        dev-translate-build.page \
        dev-translate.page \
        dev-translate-setup.page \
        dev-translate-tools.page \
        extension.page \
        extension-toolbar.page \
        extension-icon-working.page \
        extension-twitter.page \
        extension-widget.page \
	gtkapplication.page \
        help-appmenu.page \
        help-build.page \
        help.page \
        help-write.page \
	index.page \
	legal.xml

HELP_MEDIA =

HELP_LINGUAS =
