@YELP_HELP_RULES@

HELP_ID = programming-guidelines

HELP_EXTRA = \
	cc-by-sa-3-0.xml \
	example-docs.xml \
	$(NULL)

HELP_FILES = \
	additional-materials.page \
	c-coding-style.page \
	documentation.page \
	index.page \
	memory-management.page \
	parallel-installability.page \
	threading.page \
	tooling.page \
	writing-good-code.page \
	$(NULL)

HELP_LINGUAS =
