@YELP_HELP_RULES@

HELP_ID = programming-guidelines

HELP_EXTRA = \
	cc-by-sa-3-0.xml \
	example-docs.xml \
	$(NULL)

HELP_FILES = \
	additional-materials.page \
	c-coding-style.page \
	databases.page \
	documentation.page \
	file-system.page \
	index.page \
	introspection.page \
	logging.page \
	memory-management.page \
	namespacing.page \
	parallel-installability.page \
	threading.page \
	tooling.page \
	version-control.page \
	versioning.page \
	writing-good-code.page \
	$(NULL)

HELP_LINGUAS =
